D_WEBVTT/SUBTITLES don't show second line

When a Video has embeded D_WEBVTT/SUBTITLES or subtitles in .vtt format the second line of the subtitles are not displayed, this happens in vlc-3.0.21-24.fc42.x86_64 (Linux Fedora) and Android also version 3.6.5 2025-05-07

An example for the same video with D_WEBVTT/SUBTITLES and the other with srt

From mediainfo

Text ID : 3

Format : D_WEBVTT/SUBTITLES

Codec ID : D_WEBVTT/SUBTITLES

Duration : 8 min 37 s

Title : English (United States) / English (United States)

Language : English

Default : No

Forced : No


Text ID : 3

Format : Timed Text

Muxing mode : sbtl

Codec ID : tx3g

Duration : 8 min 37 s

Bit rate mode : Variable

Bit rate : 107 b/s

Frame rate : 0.427 FPS

Stream size : 6.76 KiB (0%)

Title : English (United States) / English (United States)

Language : English

Default : Yes

Forced : No

Alternate group : 3

Count of events : 204

Screenshots in the same position of the video

Screenshot_From_2025-07-30_14-07-47 SRT Subtitles

Screenshot_From_2025-07-30_14-09-02 VTT Subtitles

Edited by Nuno Dias