codec: webvtt: fix line: 0% alignment

A line: 0% positioning should set the box on top of the video viewport [^1]
(when alignment is top-left which is the default).

Fixes #29230

[^1]: https://www.w3.org/TR/webvtt1/#webvtt-line-cue-setting